--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -16,33 +16,33 @@ h1 {
   color : #333333;
 }
 h2 {
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-size : 1.8rem;
   line-height : 1.25em;
   color : #333333;
 }
 h3 {
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-size : 1.4rem;
   line-height : 1.5em;
   color : #333333;
 }
 h4 {
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-weight : bold;
   font-size : 1.2rem;
   line-height : 1.25em;
   color : #333333;
 }
 h5 {
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-weight : bold;
   font-size : 0.8rem;
   line-height : 1.38;
   color : #333333;
 }
 h6 {
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-size : 0.7rem;
   line-height : 1.15em;
   text-transform : uppercase;
@@ -51,7 +51,7 @@ h6 {
 
 /* Text styles */
 .text {
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-size : 0.7rem;
   line-height : 1.42em;
   color : #333333;
@@ -87,7 +87,7 @@ input[type='submit'].button {
   display: block;
   outline: none;
   border: none;
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-weight : bold;
   color : #FFFFFF;
   text-align: center;
@@ -98,13 +98,34 @@ input[type='submit'].button {
   transition: background-color 0.15s linear,
                          color 0.15s linear;
 }
+  .b-form-item-title {
+    min-width: 180px;
+    line-height: 40px;
+  }
+    .m-form-item-inline {
+      display: -webkit-flex;
+      display: flex;
+      align-items: flex-start;
+    }
+    .m-form-item_textarea textarea {
+      width: 100%;
+      padding: 10px;
+      background-color: #F0F0F0;
+      border-radius: 4px;
+      border: none;
+      resize: none;
+      outline: none;
+    }
 label {
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-weight : bold;
   text-decoration: none;
 }
   .button:hover,
-  input[type='submit'].button:hover {
+  input[type='submit'].button:hover,
+  .button:focus,
+  input[type='submit'].button:focus,
+  input[type='submit'].button.focus-button {
     background-color: #297DE2;
     cursor: pointer;
   }
@@ -137,7 +158,7 @@ input:not([type="radio"]),
 input:not([type="submit"]) {
   height : 40px;
   padding: 7px 18px;
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
   font-weight : bold;
   font-size : 0.7rem;
   line-height : 1rem;
@@ -204,7 +225,12 @@ input:not([type="submit"]) {
       -webkit-transition: background-color 5000s ease-in-out 0s;
       background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(0,174,255,0.04) 50%,rgba(255,255,255,0) 51%,rgba(0,174,255,0.03) 100%);
     }
-
+    .slim-label {
+      font-family: Open-Sans, sans-serif;
+      font-size: 14px;
+      font-weight: bold;
+      color: rgba(0,0,0,0.4);
+    }
 a {
   text-decoration: none;
   -webkit-transition: color 0.15s linear;
@@ -279,6 +305,7 @@ a {
       background-color: #8FDF33;
       color: #1C8D00;
     }
+  /* User menu */
   .b-menu__wrapp-login-nav {
     display: -webkit-flex;
     display: flex;
@@ -318,6 +345,23 @@ a {
       padding-right: 15px;
       color: rgba(51,51,51,0.5);
     }
+      .b-menu__wrapp-login-nav-list {
+        position: absolute;
+        top: 50px;
+        left: 0;
+        right: 0;
+        padding: 10px;
+        background-color: #FFFFFF;
+        border-radius: 4px;
+        box-shadow: 0 2px 2px rgba(0,0,0,0.5);
+        opacity: 0;
+        height: 0;
+      }
+        .m-open-user-menu.b-menu__wrapp-login-nav-list {
+          opacity: 1;
+          height: auto;
+        }
+
     .b-menu__wrapp-login-popup {
       position: absolute;
       top: 95px;
@@ -417,10 +461,10 @@ a {
             width: 100%;
             margin-bottom: 15px;
           }
-          .b-menu__wrapp-register-popup-window-register p {
+          p.input-radio-block {
             margin-bottom: 15px;
           }
-          .b-menu__wrapp-register-popup-window-register label {
+          .input-radio-block label {
             padding: 0 30px;
             position: relative;
             cursor: pointer;
@@ -428,7 +472,7 @@ a {
             padding-left: 0;
             }
 
-        .b-menu__wrapp-register-popup-window-register input[type='radio'] + span:before {
+        .input-radio-block input[type='radio'] + span:before {
           display: block;
           position: absolute;
           top: 12px;
@@ -442,32 +486,32 @@ a {
           opacity: 0.5;
           }
 
-        .b-menu__wrapp-register-popup-window-register input[type='radio'] {
+        .input-radio-block input[type='radio'] {
           visibility: hidden;
           width: 0;
           }
 
-        .b-menu__wrapp-register-popup-window-register span {
+        .input-radio-block span {
           padding-left: 15px;
           opacity: 0.5;
           transition: opacity .1s ease;
           -webkit-transition: opacity .1s ease;
           }
 
-       .b-menu__wrapp-register-popup-window-register span:hover {
+       .input-radio-block span:hover {
           opacity: 1;
           transition: opacity .1s ease;
           -webkit-transition: opacity .1s ease;
           }
 
-        .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span,
-        .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span:before{
+        .input-radio-block input[type='radio']:checked + span,
+        .input-radio-block input[type='radio']:checked + span:before{
           opacity: 1;
           transition: opacity .1s ease;
           -webkit-transition: opacity .1s ease;
           }
 
-        .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span:before{
+        .input-radio-block input[type='radio']:checked + span:before{
           text-align: center;
           border: 2px solid rgba(0,0,0,0.5);
           border-radius: 50%;
@@ -476,7 +520,7 @@ a {
           transition: border-color .1s ease;
           -webkit-transition: border-color .1s ease;
           }
-         .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span:after {
+         .input-radio-block input[type='radio']:checked + span:after {
           position: absolute;
           content: '';
           top: 16px;
@@ -486,20 +530,23 @@ a {
           border-radius: 50%;
           background-color: rgba(0,0,0,0.8);
          }
-          .b-menu__wrapp-register-popup-window-register input[type="radio"] {
+         .input-radio-block input[type="radio"] {
             position: relative;
             height: 25px;
             top: 7px;
             margin-right: 15px;
           }
+
       .b-menu__wrapp-register-popup-window .b-menu__wrapp-login {
         margin-top: 40px;
         text-align: center;
         cursor: pointer;
       }
+/*-------------------------*/
 
 main {
   min-width: 960px;
+  min-height: calc(100vh - 161px);
   padding: 20px 0 0;
   margin-top: 86px;
   background-color: #F7F7F7;
