--- a/www/css/styles-droplist.css
+++ b/www/css/styles-droplist.css
@@ -51,9 +51,9 @@
       pointer-events: none;
       width: 100%;
       max-height: 300px;
-      background: #F0F0F0;
+      background: #FFFFFF;
       border-radius: 4px;
-      box-shadow: 0 2px 2px rgba(0,0,0,0.4);
+      box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
       z-index: 100;
       overflow-y: auto;
       transition: opacity 0.2s ease;
@@ -66,7 +66,7 @@
       }
         .droplist-item:hover,
         .droplist-item_select {
-          background: #CACACA;
+          background: #f7f7f7;
         }
       .droplist-item:first-child {
         border-radius: 4px 4px 0 0;
