--- a/www/css/styles-company.css
+++ b/www/css/styles-company.css
@@ -44,24 +44,12 @@
         content: '\f061';
       }
 
-.b-filter-wrapp,
-.b-add-company-wrapp {
+.b-add-company__wrapp {
   width: 100%;
 }
-  .b-filter-wrapp a {
-    color: #0038A8;
-  }
   .block.b-add-company {
     background-color: #1C5BC9;
   }
-    .b-add-car__form-item.droplist {
-      margin-top: 20px;
-      width: 100%;
-    }
-    .b-filter__form .button.middle {
-      margin-top: 20px;
-      width: 100%;
-    }
   .b-add-company {
     margin-top: 20px;
   }
@@ -69,24 +57,4 @@
       color: #FFFFFF;
       text-align: center;
       margin-bottom: 15px;
-    }
-  .add-button.button.middle {
-    position: relative;
-    width: 100%;
-    line-height: 40px;
-    background-color: #ABE766;
-    color: #187900;
-  }
-    .add-button.button.middle:hover {
-      background-color: #8FDF33;
-      color: #1C8D00;
-    }
-    .add-button:before {
-      position: absolute;
-      top: 0;
-      left: 15px;
-      margin: 0 10px;
-      font-family: 'FontAwesome';
-      font-size: 0.7rem;
-      content: '\f067';
     }
