--- a/www/css/styles-one-company.css
+++ b/www/css/styles-one-company.css
@@ -1,18 +1,134 @@
-section.col.l-one-company,
-section.col.l-similar {
-  display: -webkit-flex;
-  display: flex;
-}
-
-.b-one-company h3,
-.b-one-company h4 {
+h1,
+h4 {
   color: #0038A8;
-  margin-bottom: 32px;
 }
-  .b-one-company__rating {
-    margin-bottom: 20px;
+  .b-one-company__title,
+  .b-one-company__info {
+    display: -webkit-flex;
+    display: flex;
   }
-  .b-one-company__rating-viewport {
+    .b-one-company__title-logo {
+      -webkit-flex: 1;
+      flex: 1;
+      max-width: 185px;
+      height: 185px;
+      padding: 10px;
+      object-fit: contain;
+      border: 1px solid #E6E6E6;
+    }
+    .b-one-company__title-note {
+      -webkit-flex: 3;
+      flex: 3;
+      margin-left: 40px;
+    }
+      .b-one-company__tag {
+        margin-bottom: 15px;
+      }
+      .b-one-company__title-note h1 {
+        float: left;
+        margin-bottom: 30px;
+      }
+      .b-one-company__rating {
+        float: left;
+        position: relative;
+        background: rgba(255, 157, 0, 0.8);
+        height: 40px;
+        margin: 10px 0 0 20px;
+        padding: 0px 15px 0px 50px;
+        font-family: Open Sans, sans-serif;
+        text-align: center;
+        font-size: 0.8rem;
+        font-weight: bold;
+        line-height: 40px;
+        color: #333333;
+        border-radius: 20px;
+      }
+        .b-one-company__rating:before {
+          position: absolute;
+          left: 15px;
+          top: 0;
+          font-family: 'FontAwesome';
+          font-size: 1.25rem;
+          vertical-align: middle;
+          color: #F67C21;
+          content: '\f005';
+        }
+      .b-one-company__short-about {
+        clear: both;
+      }
+.b-one-company__info {
+  margin-top: 40px;
+}
+  .b-one-company__info-text button.button {
+    margin: 20px 0;
+    width: auto;
+    padding: 2px 15px;
+  }
+    .b-one-company__info-text {
+      -webkit-flex: 1;
+      flex: 1;
+      max-width: 185px;
+    }
+    
+    .b-one-company__info-map {
+      -webkit-flex: 3;
+      flex: 3;
+      height: 250px;
+      margin-left: 40px;
+    }
+    .b-one-company__info-text-item:not(:last-child) {
+      margin-bottom: 10px;
+    }
+      .m-one-company__title-info-item_tel a {
+        color: #333333;
+      }
+
+.b-one-company__about,
+.b-one-company__news {
+  margin-top: 20px;
+}
+  .b-one-company__about h4 {
+    margin-bottom: 10px;
+  }
+  #galleryPhoto {
+    margin: 20px 0;
+    border: none;
+  }
+
+  .container.b-one-company__news-wrapp {
+    margin: 20px 0 10px;
+    font-size: inherit;
+  }
+    .b-one-company__news-wrapp-item {
+      display: -webkit-flex;
+      display: flex;
+      padding: 20px 0;
+      border-bottom: 1px dotted #CECECE;
+    }
+      .b-one-company__news-wrapp-item:last-child {
+        padding-bottom: 0;
+        border: none;
+      }
+      .b-one-company__news-wrapp-item img {
+        -webkit-flex: 2;
+        flex: 2;
+        height: 150px;
+        border-radius: 4px;
+        object-fit: cover;
+      }
+      .b-one-company__news-wrapp-item-text {
+        -webkit-flex: 5;
+        flex: 5;
+        margin-left: 20px;
+      }
+        .b-one-company__news-wrapp-item-text-date {
+          margin-bottom: 10px;
+          font-size: 0.55rem;
+        }
+        .b-one-company__news-wrapp-item-text h5 {
+          margin-bottom: 10px;
+        }
+  .b-one-company__about-viewport {
     height: 400px;
     width: 100%;
     margin-bottom: 20px;
@@ -37,16 +153,51 @@ section.col.l-similar {
         border-radius: 4px;
         cursor: pointer;
       }
-    .b-one-company__about {
-      margin-bottom: 20px;
+
+  .popup[popup-message="close"] {
+    opacity: 0;
+    pointer-events: none;
+  }
+  .popup[popup-message="open"] {
+    opacity: 1;
+    pointer-events: auto;
+  }
+    .b-one-company__message {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -297px;
+      margin-top: -150px;
+      padding: 20px;
+      width: 595px;
+      height: 265px;
+      background-color: #FFFFFF;
+      border-radius: 4px;
+      box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
+      z-index: 999;
+      -webkit-transition: opacity 0.2s ease;
+      transition: opacity 0.2s ease;
     }
-    .b-one-company__contact {
-      margin-bottom: 10px;
-    }
+      .b-popup-message-close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        height: 15px;
+        width: 15px;
+        background-color: #FFFFFF;
+        background-image: url(../img/icon-button-close.svg);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        cursor: pointer;
+      }
+
     .b-one-company__form {
       margin-top: 20px;
     }
-
+      .b-one-company__form input[type='submit']{
+        margin-top: 20px;
+      }
 .b-similar {
   
 }
