--- a/www/css/styles-aside-filter.css
+++ b/www/css/styles-aside-filter.css
@@ -1,7 +1,8 @@
 .b-filter-wrapp {
   width: 100%;
 }
-  .b-filter-wrapp p {
+  .b-filter-wrapp h3,
+  .b-filter-wrapp h3+h4 {
     text-align: center;
   }
     .b-filter-wrapp a {
@@ -15,3 +16,42 @@
         margin-top: 20px;
         width: 100%;
       }
+  
+  .b-filter__switch {
+    margin-top: 20px;
+    display: -webkit-flex;
+    display: flex;
+  }
+  .b-filter__switch-item {
+    -webkit-flex: 1;
+    flex: 1;
+    height: 40px;
+    text-align: center;
+    font-size: 0.65rem;
+    line-height: 36px;
+    border: 2px solid #0038A8;
+    border-left: none;
+    background-color: #FFFFFF;
+    color: #0038A8;
+    -webkit-transition: color 0.2s ease,
+                background-color 0.2s ease;
+    transition: color 0.2s ease,
+                background-color 0.2s ease;
+  }
+    .b-filter__switch-item:first-child {
+      border-radius: 18px 0 0 18px;
+      border: 2px solid #0038A8;
+    }
+    .b-filter__switch-item:last-child {
+      border-radius: 0 18px 18px 0;
+      border: 2px solid #0038A8;
+      border-left: none;
+    }
+    .m-filter__switch-item_active.b-filter__switch-item {
+      background-color: #0038A8;
+      color: #FFFFFF;
+    }
+  .b-filter__form {
+    clear: both;
+    padding-top: 10px;
+  }
