--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -106,8 +106,7 @@ input.button {
 }
   .button:hover,
   input.button:hover,
-  .button:focus,
-  input.button:focus, {
+  .button:focus {
     background-color: #297DE2;
     cursor: pointer;
   }
@@ -182,7 +181,6 @@ input.button {
 
 
 /* Styles <inputs> */
-input:not([type="radio"]),
 input:not([type="submit"]) {
   height : 40px;
   padding: 7px 18px;
@@ -202,7 +200,7 @@ input:not([type="submit"]) {
   -webkit-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
 }
-  input:focus {
+  input:not([type="submit"]):focus {
     background : #F8F8F8;
   }
   /* Style placeholder */
@@ -619,6 +617,80 @@ a {
       }
 /*-------------------------*/
 
+  .block-redactor.subtext {
+    position: absolute;
+    top: 4px;
+    right: 10px;
+    padding-right: 30px;
+    color: rgba(51,51,51,0.4);
+    line-height: 25px;
+    opacity: 0;
+    pointer-events: none;
+    cursor: pointer;
+    -webkit-transition: opacity 0.2s ease,
+                        color 0.2s ease;
+    transition: opacity 0.2s ease,
+                color 0.2s ease;
+  }
+    .block-redactor.subtext:hover {
+      color: rgba(51,51,51,1);
+    }
+    .m-block-redactor_show.block-redactor {
+      opacity: 1;
+      pointer-events: auto;
+    }
+    .block-redactor:after {
+      position: absolute;
+      display: block;
+      content: '';
+      top: 0;
+      right: 0;
+      width: 25px;
+      height: 25px;
+      background-image: url("../img/icon-redact.svg");
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+  /* Сообщение о подтверждени отправки/опубликования */
+      .b-message-confirm {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -297px;
+        margin-top: -150px;
+        padding: 20px;
+        width: 595px;
+        height: 265px;
+        background-color: #FFFFFF;
+        border-radius: 4px;
+        box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
+        -webkit-transition: opacity 0.2s ease;
+        transition: opacity 0.2s ease;
+      }
+        .b-popup-message-close {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          height: 15px;
+          width: 15px;
+          background-color: #FFFFFF;
+          background-image: url(../img/icon-button-close.svg);
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat;
+          cursor: pointer;
+        }
+        .b-message-confirm {
+          -webkit-display: flex;
+          display: flex;
+        }
+        .b-message-confirm * {
+          margin: auto;
+        }
+/* ---------------------------------------------------- */
+
 main {
   min-width: 960px;
   min-height: calc(100vh - 161px);
@@ -633,6 +705,7 @@ main {
   section {
     margin-bottom: 20px;
   }
+  .b-main-title > h1,
   .b-main-title > h3 {
     margin-bottom: 30px;
     font-weight: bold;
@@ -654,7 +727,7 @@ main {
 
     .dropdown-block {
       position: absolute;
-      top: 40px;
+      top: 32px;
       right: 20px;
     }
       .dropdown-block-current {
