--- a/www/css/styles-main.css
+++ b/www/css/styles-main.css
@@ -34,7 +34,6 @@ section {
 }
   .b-content__lider {
   }
-    .b-content__lider h3,
     .b-news__inner h3,
     .b-new-auto h3 {
       color : #0038A8;
@@ -46,6 +45,7 @@ section {
       z-index: 1;
     }
       .b-content__lider-article-img {
+        margin-bottom: 25px
         height:  408px;
         width: 100%;
         border-radius: 4px;
@@ -68,9 +68,29 @@ section {
         -webkit-border-radius : 20px;
         border-radius : 20px;
       }
-      .b-content__lider-article h4 {
-        margin: 25px 0 0;
-        color : #1C5BC9;
+      .b-content__lider-article h4.b-content__lider-article-title {
+        position: absolute;
+        top:  35px;
+        right: -30px;
+        margin: 0;
+        padding: 0 10px;
+        background : rgba(111, 235, 0, 0.8);
+        height : 40px;
+        transform: rotate(45deg);
+        font-family: Open Sans, sans-serif;
+        text-align: center;
+        font-size: 0.8rem;
+        line-height: 2.5em;
+        font-weight: bold;
+        color: #FFFFFF;
+        -moz-border-radius : 20px;
+        -webkit-border-radius : 20px;
+        border-radius : 20px;
+      }
+      h4,
+      h4 a {
+        margin-bottom: 25px;
+        color : #0038A8;
       }
       .b-content__lider-article-author {
         margin: 10px 0 20px;
