--- a/www/css/styles-my-blog.css
+++ b/www/css/styles-my-blog.css
@@ -1,3 +1,12 @@
-.b-blog h3 {
-  color: #0038A8;
+.b-blog {
 }
+  .b-blog h1 {
+    color: #0038A8;
+    margin-bottom: 40px;
+  }
+    .b-blog__wrap-item {
+      margin-bottom: 20px;
+      width: 100%;
+      height: 400px;
+      border: 1px dotted #333333;
+    }
