--- a/www/css/list-marks.css
+++ b/www/css/list-marks.css
@@ -1,14 +1,17 @@
+.block.b-mark {
+  /* position: fixed; */
+  width: 57px;
+}
   .b-mark__list {
     width: 57px;
     margin: 0 auto;
   }
     .b-mark__list li {
-      height: 35px;
       width: 100%;
     }
     .b-mark__list-item {
       display: block;
-      height: 100%;
+      height: 35px;
       width: 100%;
       margin: 5px auto;
       background-position: center;
