--- a/www/css/paginator.css
+++ b/www/css/paginator.css
@@ -2,41 +2,30 @@
       width: 100%;
     }
     
-    .paginator .container {
-      font-size: 0;
-      margin: 0 -4px;
+    .paginator .pagin-container {
+      display: -webkit-flex;
+      display: flex;
+      clear: both;
+      margin-right: -10px;
     }
-    
-      .paginator .container .item {
-        font-size: medium;
-        display: inline-block;
-        vertical-align: top;
-        margin: 0 4px;
-        padding-bottom: 35px;
+      .paginator .pagin-container.pagin-wrap {
+        -webkit-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin-bottom: -10px;
       }
-        .paginator .container .item img {
-          height: 120px;
-          width: 100%;
-          margin-bottom: 15px;
-          object-fit: cover;
-          border-radius: 4px;
-        }
-        .b-new-auto__item-name,
-        .b-new-auto__item-auto {
-          font-family: 'Open Sans', sans-serif;;
-          font-size : 0.7rem;
-          line-height : 1.7em;
-          color : #333333;
-        }
-        .b-new-auto__item-name {
-          font-weight: bold;
-          color : #1C5BC9;
-        }
-    .paginator .controll {
+      .paginator .pagin-container .item {
+        -webkit-flex-grow: 1;
+        flex-grow: 1;
+        margin-right: 10px;
+      }
+      .paginator .pagin-container.pagin-wrap .item {
+        margin-bottom: 10px;
+      }
+    .controll {
       margin-top: 20px;
       font-size: 0;
     }
-      .paginator .controll .item {
+      .controll .item {
         display: inline-block;
         text-align: center;
         height: 36px;
@@ -53,18 +42,18 @@
         transition: color 0.2s ease,
                     background-color 0.2s ease;
       }
-      .paginator .controll .item:last-child {
+      .controll .item:last-child {
         margin-right: 0;
       }
-      .paginator .controll .m-pagination_hide.item {
+      .controll .m-pagination_hide.item {
         opacity: 0.4;
         pointer-events: none;
       }
-      .paginator .controll .item:hover {
+      .controll .item:hover {
         color: #FFFFFF;
         background-color: #1C5BC9;
       }
-      .paginator .controll .m-pagination-item_current.item {
+      .controll .m-pagination-item_current.item {
         color: #FFFFFF;
         background-color: #1C5BC9;
       }
