--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -5,6 +5,9 @@
     url('../fonts/MyriadProRegular.woff') format('woff'),
     url('../fonts/MyriadProRegular.ttf') format('truetype'),
 }
+.row {
+  min-height: 100%;
+}
 html {
   font-size: 20px;
 }
@@ -14,19 +17,19 @@ h1 {
   font-weight: bold;
   font-size : 2.4rem;
   line-height : 1.1em;
-  color : #333333;
+  color : #0038A8;
 }
 h2 {
   font-family: 'Open Sans', sans-serif;
   font-size : 1.8rem;
   line-height : 1.25em;
-  color : #333333;
+  color : #0038A8;
 }
 h3 {
   font-family: 'Open Sans', sans-serif;
   font-size : 1.4rem;
   line-height : 1.5em;
-  color : #333333;
+  color : #0038A8;
 }
 h4 {
   font-family: 'Open Sans', sans-serif;
@@ -57,6 +60,7 @@ h6 {
   color : #333333;
 }
 .lead {
+  margin-top: 20px;
   font-family: 'Open Sans', sans-serif;
   font-size : 0.8rem;
   line-height : 1.42em;
@@ -73,7 +77,17 @@ h6 {
       line-height : 1.33em;
       color : #1C5BC9;
     }
-
+a {
+  text-decoration: none;
+  -webkit-transition: color 0.15s linear;
+  transition: color 0.15s linear;
+}
+a.text {
+  color: #0038A8;
+}
+  a.text:hover {
+    color: #1C86C9;
+  }
 /* Buttons */
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -178,6 +192,20 @@ input.button {
         background-color: #8FDF33;
         color: #F2FFEF;
       }
+  .back-link {
+    color: #0038A8;
+  }
+    .back-link:hover {
+      color: #297DE2;
+    }
+    .back-link:before {
+      position: relative;
+      bottom: -0.15em;
+      margin-right: 10px;
+      font-family: 'FontAwesome';
+      font-size: 2em;
+      content: '\f060';
+    }
 
 
 /* Styles <inputs> */
@@ -281,11 +309,6 @@ label {
       font-weight: bold;
       color: rgba(0,0,0,0.4);
     }
-a {
-  text-decoration: none;
-  -webkit-transition: color 0.15s linear;
-  transition: color 0.15s linear;
-}
 
 /* menu */
 .l-menu {
@@ -297,9 +320,10 @@ a {
   background-color: #FFFFFF;
   -webkit-transition: height 0.3s ease;
   transition: height 0.3s ease;
+  box-shadow: 0 1px 15px -2px rgba(0,0,0,0.5);
   z-index: 10000;
 }
-  .l-menu.m-menu_small,
+  .m-menu_small.l-menu,
   .m-menu_small .b-menu__wrapp-logo {
       height: 43px;
   }
@@ -389,7 +413,13 @@ a {
       margin-right: 5px;
       border-radius: 50%;
       object-fit: cover;
+      -webkit-transition: -webkit-transform 0.3s ease;
+      transition: transform 0.3s ease;
     }
+      .m-menu_small .b-menu__wrapp-login-nav-photo {
+        -webkit-transform: scale(0.8, 0.8);
+        transform: scale(0.8, 0.8);
+      }
     .b-menu__wrapp-login-nav-name {
       padding-right: 15px;
       color: rgba(51,51,51,0.5);
@@ -653,6 +683,73 @@ a {
       background-repeat: no-repeat;
     }
 
+  /* Дата и тег в новостях */
+    .b-new__item-top {
+      height: 0.7rem;
+    }
+      .b-new__item-top .date {
+        float: left;
+        margin-right: 20px;
+      }
+      .b-new__item-top .tag {
+        float: right;
+      }
+      .b-new__item-top .tag a:not(:last-child):after {
+        content: ', \0020';
+      }
+    .b-new__item-top+a {
+      clear: both;
+    }
+
+  /* Комментарии */
+    .b-new__item-bottom {
+      height: 0.7rem;
+      color: #0038A8;
+    }
+      .b-new__item-bottom .comments {
+      }
+        .b-new__item-bottom .comments:before {
+          margin-right: 5px;
+          font-family: 'FontAwesome';
+          font-weight: normal;
+          color: #333333;
+          font-size: 0.75rem;
+          content: '\f0e5';
+        }
+      .b-new__item-bottom .comments:after {
+          margin: 0 5px;
+          color: #333333;
+          content: attr(data-name);
+        }
+
+  /* Социальные сети */
+    .b-social {
+      display: -webkit-flex;
+      display: flex;
+      margin-top: 30px;
+    }
+      .b-social-item {
+        display: block;
+        height: 40px;
+        width: 40px;
+        margin-right: 10px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+      }
+      .b-social-item:last-child {
+        margin-right: 0;
+      }
+        .m-social-item_fb.b-social-item {
+          background-image: url('../img/social-logo/fb.svg');
+        }
+        .m-social-item_tw.b-social-item {
+          background-image: url('../img/social-logo/tw.svg');
+        }
+        .m-social-item_gm.b-social-item {
+          background-image: url('../img/social-logo/gm.svg');
+        }
+
   /* Сообщение о подтверждени отправки/опубликования */
       .b-message-confirm {
         position: absolute;
@@ -694,8 +791,7 @@ a {
 main {
   min-width: 960px;
   min-height: calc(100vh - 161px);
-  padding: 20px 0 0;
-  margin-top: 86px;
+  padding: 106px 0 0;
   background-color: #F7F7F7;
 }
   .wrapper {
@@ -712,11 +808,12 @@ main {
     color: #0038A8;
   }
   section .block {
-    display: -webkit-flex;
+/*     display: -webkit-flex;
     display: flex;
     -webkit-flex-direction: column;
-    flex-direction: column;
+    flex-direction: column; */
     position: relative;
+    min-height: 0;
     width: 100%;
     padding: 20px;
     background : #FFFFFF;
@@ -724,7 +821,11 @@ main {
     -webkit-border-radius : 4px;
     border-radius : 4px;
   }
-
+  section .block .text-content {
+    width: 600px;
+    margin-right: auto;
+    margin-left: auto;
+  }
     .dropdown-block {
       position: absolute;
       top: 32px;
@@ -871,6 +972,36 @@ main {
           margin-right: 0;
         }
       }
+
+/* Кнопка вверх */
+.button-to-top {
+  position: fixed;
+  bottom: 300px;
+  left: 40px;
+  height: 2.7rem;
+  padding-top: 1.6rem;
+  width: 50px;
+  color: #A8A8A8;
+  text-align: center;
+  opacity: 0.5;
+  cursor: pointer;
+  -webkit-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
+}
+  .button-to-top:hover {
+    opacity: 1;
+  }
+    .button-to-top:before {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 50px;
+      margin-left: -25px;
+      font-family: 'FontAwesome';
+      font-size: 1.8rem;
+      content: '\f062';
+    }
+/* -------------------- */
 
 .l-footer {
   height: 75px;
