--- a/www/css/styles-news.css
+++ b/www/css/styles-news.css
@@ -8,65 +8,30 @@
     a span :hover {
       color: #1C86C9;
     }
-  .b-news h1 {
-    color: #0038A8;
-    margin-bottom: 40px;
-  }
-   .b-new__item-top {
-      height: 0.7rem;
-    }
-      .b-new__item-top .date {
-        float: left;
-      }
-      .b-new__item-top .tag {
-        float: right;
-      }
-    
-    .b-new__item-bottom {
-      position: absolute;
-      left: 10px;
-      bottom: 0;
-      height: 0.7rem;
-      color: #0038A8;
-      margin-top: 5px;
-    }
-      .b-new__item-bottom .comments {
-      }
-        .b-new__item-bottom .comments:before {
-          margin-right: 5px;
-          font-family: 'FontAwesome';
-          font-weight: normal;
-          color: #333333;
-          font-size: 0.75rem;
-          content: '\f0e5';
-        }
-      .b-new__item-bottom .comments:after {
-          margin: 0 5px;
-          color: #333333;
-          content: attr(data-name);
-        }
-      
+
 .b-news__wrap {
   -webkit-display: flex;
   display: flex;
+  -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
+  width: auto;
   margin-left: -10px;
   margin-right: -10px;
 }
     .b-news__wrap-item {
       position: relative;
-      -webkit-flex: 1;
-      flex: 1;
+      -webkit-flex: 1 0 calc(33.33337% - 20px);
+      flex: 1 0  calc(33.33337% - 20px);
       margin-bottom: 20px;
-      width: 100%;
-      height: 21rem;
-      min-width: 50%;
-      padding: 0 10px;
+      margin: 0 10px 20px;
+      max-width: calc(33.33337% - 20px);
+      padding: 10px;
+      border: 1px solid #CECECE;
+      border-radius: 4px
     }
     .b-news__wrap-item p+a {
       display: block;
       clear: both;
-      padding-top: 10px;
     }
     .b-news__wrap-item img {
       width: 100%;
@@ -98,7 +63,6 @@
         content: '\f061';
       }
 
-
 .b-popular {
   margin-top: 20px;
 }
@@ -110,7 +74,6 @@
     position: relative;
     width: 100%;
     margin-bottom: 20px;
-    padding-bottom: 1.2rem;
   }
     .b-popular__item a {
       color: #0038A8;
@@ -122,7 +85,7 @@
       margin-bottom: 0;
     }
     .b-popular__item img {
-      margin-top: 10px;
+      margin-bottom: 10px;
       width: 100%;
       height: 160px;
       object-fit: contain;
